--- a/Kanban_Board_dev/kanban.css
+++ b/Kanban_Board_dev/kanban.css
@@ -26,7 +26,7 @@ body {
 
 .kanban-heading-text {
   font-size: 1.8rem;
-  background-color: tomato;
+  background-color: rgb(214, 174, 167);
   padding: 0.8rem 1.7rem;
   border-radius: 0.5rem;
   margin: 1rem;
